# slowo

./: .gitignore  README.md  pyproject.toml  setup.py
slowo-venv/: pyvenv.cfg
src/slowo/: __init__.py  emoji.py  main.py  nya.py  replace.py  stutter.py  wepwace.py
tests/: test.py
